--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "expo-blur": "~12.2.2",
     "expo-build-properties": "~0.6.0",
     "expo-checkbox": "~2.3.1",
-    "expo-dev-client": "^2.1.6",
+    "expo-dev-client": "^2.4.6",
     "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
     "expo-secure-store": "^12.1.1",
@@ -36,14 +36,17 @@
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
+    "react-insta-stories": "^2.6.2",
     "react-native": "0.71.7",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-gifted-chat": "^2.1.0",
+    "react-native-insta-story": "^1.1.9",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.6.0",
     "react-native-razorpay": "^2.3.0",
+   
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-tab-view": "^3.5.1",
